Jobbet med å gi phoneNo til user og admin (phoneNo trengs for å kunne POSTe via GUI-laget) + samordne AppUser og Person-entities