@@ -13,6 +13,7 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 @EnableMethodSecurity
@@ -34,11 +35,12 @@ public class NagApplication implements CommandLineRunner {
 
     @Override
     public void run(String[] args) throws Exception {
-        // Add user objects and save these to the database
-        Person person1 = new Person("4712345678", "John", "Smith", "josmi@mail.com", null, LocalDate.parse("1970-01-30"));
-        Person person2 = new Person("4798765432", "Kathy", "Carpenter", "kacarp@mail.com", null, LocalDate.parse("1974-05-15"));
 
-        personRepository.saveAll(Arrays.asList(person1, person2));
+        // Add user objects and save these to the database
+        Person person1 = new Person("4712345678", "John", "Smith", "josmi@mail.com", null, null);
+        Person person2 = new Person("4787654321", "Kathy", "Carpenter", "kacarp@mail.com", null, null);
+
+        personRepository.saveAll(List.of(person1, person2));
 
         for (Person person : personRepository.findAll()) {
             logger.info(person.getFirstName() + " " + person.getLastName());
@@ -48,14 +50,16 @@ public class NagApplication implements CommandLineRunner {
         appUserRepository.save(new AppUser(
                 "user",
                 "$2y$10$1yYXa.mXL1ZabeBJ3E3lvOG361jIT0oojJEBSM4fO1uwJsAE1892O",
-                "USER"
+                "USER",
+                person1
         ));
 
         // Username: admin, password: admin
         appUserRepository.save(new AppUser(
                 "admin",
                 "$2y$10$5cD3SNsJQUwoHyjhhx0g0.3qz/e7KpEbbyxvctqBELPF1H/XQMF2a",
-                "ADMIN"
+                "ADMIN",
+                person2
         ));
     }
 }
